refactor(Menu): Enum 형으로 리팩토링